--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,7 @@ social-auth-app-django==5.6.0
 social-auth-core==4.8.1
 sqlparse==0.5.3
 urllib3==2.5.0
+psycopg2-binary>=2.9
+gunicorn>=21.0
+python-dotenv>=1.0
+django-environ>=0.11
